# SkillBox

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installation_problem.yml  starter_task.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/skillbox-cli/: Cargo.toml
crates/skillbox-core/: Cargo.toml
crates/skillbox-core/src/: db.rs  fsutil.rs  git_sync.rs  hooks.rs  import.rs  lib.rs  marketplace.rs  operations.rs  paths.rs  remote.rs  skills.rs  state.rs  tests.rs  types.rs  usage.rs  workspaces.rs
crates/skillbox-git/: Cargo.toml
crates/skillbox-github/: Cargo.toml
docs/: architecture.md  data-model.md  good-first-issues.md  implementation-status.md  release.md  roadmap.md  uninstall-reset.md  workflows.md
docs/decisions/: 0001-managed-store-is-source-of-truth.md  (+3 more)
docs/design/: README.md
scripts/: check-commit-message.js  check-commit-message.test.js  check-docs-for-staged-changes.js  check-docs-for-staged-changes.test.js  dependency-lock.test.js  desktop-dev-config.test.js  install-git-hooks.js  install-git-hooks.test.js  release.js  release.test.js  write-updater-json.js
(+56 files in other folders)
