[package]
name = "skillbox-core"
version = "0.3.3"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
skillbox-git = { path = "../skillbox-git" }
skillbox-github = { path = "../skillbox-github" }
