[package]
name = "skillbox-core"
version = "0.3.7"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
skillbox-git = { path = "../skillbox-git" }
skillbox-github = { path = "../skillbox-github" }
